--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -9,72 +9,21 @@
     android:fitsSystemWindows="true"
     tools:context="com.example.absencemanager.Home"
     tools:openDrawer="start">
-    <LinearLayout
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <androidx.cardview.widget.CardView
-            xmlns:card_view="https://schemas.android.com/apk/res-auto"
-            android:layout_width="match_parent"
-            android:layout_height="140dp"
-            card_view:cardBackgroundColor="#FFFFFF"
-            card_view:cardCornerRadius="3dp"
-            card_view:cardElevation="3dp"
-            android:layout_margin="10dp"
-            card_view:cardUseCompatPadding="true"
-            android:id="@+id/card_view">
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal"
-                android:layout_margin="10dp">
-                <TextView
-                    android:id="@+id/nameClass"
-                    android:text="Master SIM"
-                    android:textSize="22sp"
-                    android:textColor="#345953"
-                    android:fontFamily="monospace"
-                    android:textAlignment="center"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:layout_gravity="center"
-                    android:textAppearance="?android:attr/textAppearanceLarge"/>
-                <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
-                    <Button
-                        android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        android:layout_weight="1"
-                        android:layout_margin="5dp"
-                        android:text="Edit Student"
-                        android:elevation="5dp"
-                        android:background="@drawable/button_style"/>
-                    <Button
-                        android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        android:layout_weight="1"
-                        android:elevation="5dp"
-                        android:layout_margin="5dp"
-                        android:background="@drawable/button_style"
-                        android:text="Edit Sessions"/>
-                </LinearLayout>
-            </LinearLayout>
-        </androidx.cardview.widget.CardView>
-
-    </LinearLayout>
-
-    <androidx.coordinatorlayout.widget.CoordinatorLayout
+        <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:id="@+id/container_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
-        
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/main_add_fab"
