--- a/app/src/main/res/layout/card_item.xml
+++ b/app/src/main/res/layout/card_item.xml
@@ -1,49 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:tag="cards main container">
+    android:id="@+id/mainLayout">
     <androidx.cardview.widget.CardView
         xmlns:card_view="https://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
-        android:layout_height="140dp"
+        android:layout_height="wrap_content"
         card_view:cardBackgroundColor="#FFFFFF"
         card_view:cardCornerRadius="3dp"
         card_view:cardElevation="3dp"
         android:layout_marginLeft="3dp"
         android:layout_marginRight="3dp"
-        android:layout_marginBottom="5dp"
+        android:layout_marginBottom="7dp"
         android:layout_marginTop="3dp"
         card_view:cardUseCompatPadding="true"
         android:id="@+id/card_view">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_margin="10dp">
+            android:layout_margin="5dp">
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="2"
+            android:orientation="vertical">
             <TextView
-                android:id="@+id/nameClass"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
+            android:id="@+id/nameClass"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+                android:textSize="22sp"
+                android:textColor="#345953"
+                android:fontFamily="monospace"
+                android:textAlignment="center"
+            android:layout_gravity="center"
+            android:textAppearance="?android:attr/textAppearanceLarge"/>
+            <TextView
+                android:id="@+id/filierClass"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
                 android:layout_weight="1"
-                android:layout_gravity="center"
+                android:textColor="#345953"
                 android:textAppearance="?android:attr/textAppearanceLarge"/>
+        </LinearLayout>
             <LinearLayout
                 android:layout_width="0dp"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:orientation="vertical">
                 <Button
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
-                    android:text="Edit Student"/>
+                    android:layout_margin="5dp"
+                    android:text="Edit Student"
+                    android:textColor="#FFFFFFFF"
+                    android:textFontWeight="bold"
+                    android:elevation="5dp"
+                    android:background="@color/colorPrimaryDark"/>
                 <Button
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
-                    android:text="Edit Sessions"/>
+                    android:elevation="5dp"
+                    android:textColor="#FFFFFFFF"
+                    android:textFontWeight="bold"
+                    android:layout_margin="5dp"
+                    android:background="@color/colorPrimaryDark"
+                    android:text="Edit Seances"/>
             </LinearLayout>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
