--- a/app/src/main/res/layout/card_item.xml
+++ b/app/src/main/res/layout/card_item.xml
@@ -53,6 +53,7 @@
                 android:layout_weight="1"
                 android:orientation="vertical">
                 <Button
+                    android:id="@+id/editStu"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
@@ -63,6 +64,7 @@
                     android:elevation="5dp"
                     android:background="@color/colorPrimaryDark"/>
                 <Button
+                    android:id="@+id/editSean"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
